create form and validators

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,15 @@
   <header class="bg-dark text-white p-3 text-center">
     <h4>Actividad 2 - Carga de Api Products Project</h4>
   </header>
-  <section class="container my-4">
-    <app-products-list></app-products-list>
-  </section>
+  <div class="body">
+    <section class="container mt-3">
+      <app-product-form></app-product-form>
+    </section>
+    <section class="container my-4">
+      <app-products-list></app-products-list>
+    </section>
+  </div>
   <footer class="bg-dark text-white p-2 text-center">
-    <p>©2025 DWEC Patricia Gutiérrez Rivas</p>
+    <p><small>©2025 DWEC Patricia Gutiérrez Rivas</small></p>
   </footer>
 </section>
