--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -11,5 +11,5 @@
       <p class="card-text"><small class="text-body-secondary" style="font-size:x-small;">Ref. {{myProduct._id}}</small></p>
     </div>
     <!-- boton eliminar producto -->
-    <button class="btn btn-outline-danger m-3 fw-semibold" (click)="deleteProduct(myProduct)">Eliminar</button>
+    <button class="btn btn-outline-danger m-3 fw-semibold" (click)="deleteProduct(myProduct)"><small>Eliminar</small></button>
 </div>
