--- a/src/app/components/product-filter/product-filter.component.html
+++ b/src/app/components/product-filter/product-filter.component.html
@@ -1,1 +1,93 @@
-<p>product-filter works!</p>
+<!-- formulario dentro de un modal https://getbootstrap.com/docs/4.0/components/modal/ -->
+<!-- button trigger modal -->
+<button type="button" class="btn btn-dark px-3" data-bs-toggle="modal" 
+data-bs-target="#filterModal">
+    <small>Filtrar productos</small>
+</button>
+<!-- modal -->
+<div class="modal fade" id="filterModal" data-bs-backdrop="static" 
+data-bs-keyboard="false" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header border-end-0">
+                <h6 class="modal-title text-uppercase" id="filterModalLabel">
+                    Filtros de búsqueda</h6>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" 
+                aria-label="Close"></button>
+            </div>
+            <div class="modal-body" style="font-size:small;">
+                <form #myFilterForm="ngForm" (ngSubmit)="getDataFilter(myFilterForm)">
+                    <!-- filtro nombre -->
+                    <div class="form-group row my-2">
+                        <label for="name" class="col-sm-2 col-form-label">
+                            Nombre:</label>
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control form-control-sm" id="name" 
+                            name="name" placeholder="Introduce el nombre" ngModel>
+                        </div>
+                    </div>
+                    <!-- filtro precio -->
+                    <div class="form-group row my-2">
+                        <label for="name" class="col-sm-2 col-form-label">
+                            Precio:</label>
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-9">
+                            <input type="number" class="form-control form-control-sm" id="price" 
+                            name="price" placeholder="Introduce el precio" ngModel>
+                        </div>
+                    </div>
+                    <!-- filtro categoria -->
+                    <div class="form-group row">
+                        <label for="catgory" class="col-sm-2 col-form-label">
+                            Categoría:</label>
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-9 py-2">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" 
+                                value="mujer" id="category">
+                                <label for="category" class="form-check-label">
+                                  Mujer
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" 
+                                value="hombre" id="category">
+                                <label for="category" class="form-check-label">
+                                  Hombre
+                                </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" 
+                                value="niño" id="category">
+                                <label for="category" class="form-check-label">
+                                  Niño
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- filtro activo -->
+                    <div class="form-group row my-2">
+                        <div class="col-sm-3 mb-1">Producto activo:</div>
+                        <div class="col-sm-9">
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="active" 
+                                id="activeTrue" value="true" ngModel>
+                                <label class="form-check-label" for="activeTrue">Activo</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="active" 
+                                id="activeFalse" value="false" ngModel>
+                                <label class="form-check-label" for="activeFalse">No activo</label>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- boton submit formulario -->
+                    <input type="submit" value="Filtrar" class="btn btn-primary my-2 
+                    fw-semibold px-4" style="font-size:small;">
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
